# xla_memory_analyzer

./: .gitignore  README.md  graph.py  jax_test.py  main.py  memory_stats.py  models.py  pyproject.toml
src/xla_memory_analyzer/: cli.py  cli_utils.py  graph.py  memory_stats.py  models.py  parse_mlir.py  xla_memory_analyzer.py
